# ai-code-assistant

./: .buildinfo  .env_sample  CHANGELOG.md  Design.html  HowToUse.html  Memo.html  README.md  Requirements.html  SoftwareSpecification.html  ai_code_assistant.assistant.html  ai_code_assistant.cli.html  ai_code_assistant.common.html  ai_code_assistant.gui.html  ai_code_assistant.gui.model.html  ai_code_assistant.gui.view.html  ai_code_assistant.gui.view.tool_settings.html  ai_code_assistant.html  ai_code_assistant.llm.html  ai_code_assistant.tools.html  ai_code_assistant.utils.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: build.yml
_sources/: HowToUse.rst.txt  Memo.rst.txt  Requirements.md.txt  Requirements.rst.txt  SoftwareSpecification.rst.txt  ai_code_assistant.gui.model.rst.txt  ai_code_assistant.gui.rst.txt  ai_code_assistant.gui.view.rst.txt  ai_code_assistant.gui.view.tool_settings.rst.txt  ai_code_assistant.llm.rst.txt  ai_code_assistant.rst.txt  ai_code_assistant.tools.rst.txt  ai_code_assistant.utils.rst.txt  index.rst.txt  modules.rst.txt
_sources/api/: ai_code_assistant.assistant.rst.txt  ai_code_assistant.cli.rst.txt  ai_code_assistant.common.rst.txt
api/: ai_code_assistant.assistant.html  ai_code_assistant.cli.html  ai_code_assistant.common.html  ai_code_assistant.gui.html  ai_code_assistant.gui.model.html  ai_code_assistant.gui.view.html  ai_code_assistant.gui.view.tool_settings.html  ai_code_assistant.html  ai_code_assistant.llm.html  ai_code_assistant.tools.html  ai_code_assistant.utils.html  modules.html
doc/: Design.md  JetBrains-Plugin-仕様検討.md  SoftwareSpecification.md  SpecificationUnderConsideration.md  memo.md  ソフトウェア要件.md
docs/source/: Design.rst  ai_code_assistant.gui.rst  ai_code_assistant.gui.view.rst  ai_code_assistant.gui.view.tool_settings.rst  ai_code_assistant.utils.rst  conf.py  index.rst  modules.rst
source/: Memo.md  SoftwareSpecification.md  conf.py  index.rst
source/api/: ai_code_assistant.assistant.rst  ai_code_assistant.cli.rst  ai_code_assistant.common.rst  ai_code_assistant.gui.model.rst  ai_code_assistant.llm.rst  ai_code_assistant.rst  ai_code_assistant.tools.rst
src/ai_code_assistant/: main.py
src/ai_code_assistant/assistant/: assistant.py  interfaces.py
src/ai_code_assistant/common/: app_context.py  path.py
src/ai_code_assistant/gui/: chat_page.py  chat_state.py  gui_app.py  tool_state.py
src/ai_code_assistant/gui/model/: ai_assistant_model.py
src/ai_code_assistant/gui/view/: chat_page.py  chat_state.py  page_header.py
src/ai_code_assistant/gui/view/tool_settings/: __init__.py  tool_widget.py
src/ai_code_assistant/gui/view/widget/: __init__.py  tool_state.py  tool_widget.py
src/ai_code_assistant/gui/view_model/: ai_assistant_state.py
src/ai_code_assistant/llm/: interfaces.py  llm.py
src/ai_code_assistant/tools/: ai_tools.py  embeddings.py  interfaces.py  retriever_tool.py  tool_kit.py  tool_settings_manager.py  tools.py
src/ai_code_assistant/utils/: logger.py
tests/tests_ai_code_assistant/: test_aws_utils.py  test_main.py
tests/tests_ai_code_assistant/tests_tools/: test_ai_tool.py  test_ollama.py  test_tool_kit.py  test_tool_settings_manager.py
